Fix dark mode

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -114,4 +114,12 @@
     {
         background-color: #aaa;
     }
+    .trigger
+    {
+        background-color: #111;
+    }
+    .page-link
+    {
+        background-color: #aaa;
+    }
 }
